Low_level_Design_Problems/Leetcode/G4G/src/Test/Itesting2/Engine.java
//package Test.Itesting2;
//
//interface A
//{
//    public void aaa();
//}
//interface B
//{
//    public int aaa();
//}
//
//class Central implements A,B
//{
//
//    public void aaa(int a) // error
//    {
//    }
//    public int aaa() // error
//    {
//    }
//    public static void main(String args[])
//    {
//
//    }
//}